--- a/CSS/style_inicio.css
+++ b/CSS/style_inicio.css
@@ -35,6 +35,51 @@ a.header_element:hover {
     border-radius: 5px;
 }
 
-carru
+.carrusel {
+    width: 80%;
+    max-width: 120em;
+    background-color: lightskyblue;
+
+
+}
+.carrusel .grande{
+    width: 200%;
+
+    background-color: orange;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+
+    transition: all .5s ease;
+    transform: translateX(0%);
+
+}
+.carrusel .img{
+    width: calc(100% / 4);
+
+
+    background-color: lime;
+    
+}
+.carrusel .puntos{
+    width: 100%;
+    background-color: red;
+    padding: 1em;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+
+}
+.carrusel .punto{
+    width: 2em;
+    height: 2em;
+    background-color: blue;
+    margin: 1em;
+}
+.carrusel .punto.activo{
+    background-color: rgb(44, 223, 28);
+}
 
    
