--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/index.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="all_sections">
 
-        <div class="section">
+        <div class="section w_image">
 
             <p>Contamos con un equipo dispuesto ayudar las personas con situacion de pobreza en la Parroquia El Carmen y cualquier sitio del municipio Simon Bolivar. </p>
             <img src="{% static '/images/photo_section1.jpeg'%}" alt="integrantes" class="section_img">
@@ -71,15 +71,15 @@
             <p>Así como el Hijo del Hombre no vino para ser servido, sino para servir y para dar su vida en rescate por muchos.</p>
         </div>
 
-        <div class="section">
+        <div class="section w_image">
 
-            <p>La educación es el arma más potente que puedes usar para cambiar el mundo (Nelson Mandela).</p>
+            {% comment %} <p>La educación es el arma más potente que puedes usar para cambiar el mundo (Nelson Mandela).</p> {% endcomment %}
             <p>Realizamos charlas en instituciones educativas sobre temas como la educacion sexual, el bulling, No a las Drogas, enseñanzas cristianas entre otros.</p>
             {% comment %} <p>Hacemos donaciones de utiles escolares ayudando a mas de 60 niños y adolecentes por institucion que no cuentan con el material necesario para estudiar.</p> {% endcomment %}
             <img src="{% static '/images/photo_section2.jpeg'%}" alt="educacion" class="section_img">
          </div>
 
-        <div class="section">
+        <div class="section w_image">
             <p>Recibimos ayuda de de los integrantes de las iglesias Centro Familiar Cristiano Peniel en lecheria e Iglesia Bautista Memorial ubicada en boyaca V. </p>
             <img src="{% static '/images/imagen_title4.jpeg'%}" alt="" class="section_img">
         </div>
