--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/como_funciona.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/como_funciona.html
@@ -3,13 +3,17 @@
     <head>
         <title></title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../../CSS/style_campanas.css">       
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'CSS/style_como_funciona.css' %}">      
     </head>
     <body>
         <header>
             <div id="header"> 
-                <img class="header_element" id="logo" src="../../images/logo_dulce_refugio.png" alt="logo de la funcacion">
+                <img class="header_element" id="logo" src="{% static 'images/logo_dulce_refugio.png' %}" alt="logo de la funcacion">
             </div>
         </header>
+        <p>La fundación se mantiene funcionando gracias a los ingresos de los integrantes las donaciones de las iglesias Bautista Memorial y Centro Familiar Cristiano Peniel. Tambien contamos con su ayuda apoyando las actividades que se realizan en un periodo de dos veces por mes o tres veces por mes.</p>
+            <img src="" alt="">
+            <img src="" alt="">
     </body>
 </html>
