--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/asistencia_medica.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/asistencia_medica.html
@@ -12,12 +12,23 @@
                 <img class="header_element" id="logo" src="{% static 'images/logo_dulce_refugio.png' %}" alt="logo de la funcacion">
             </div>
         </header>
-        <div class="donate">
-            <img src="{% static 'images/photo_donate1.jpg' %}" alt="donate1">
+
+        <div class="donate2">
+
+            <div class="parrafo">
+                
+            <img src="{% static 'images/photo_donate2.jpg' %}" alt="donate1">
             <h2>Asistencia medica.</h2>
             <p>Si decides donar en el area de asistencia medica estarias apoyando a la actividades que se realizan para visitar hospitales y personas enfermas. en donde los integrantes de la fundacion le entregamos medicamentos a hipertensos, diabeticos, personas con Cancer entre otros.</p>
-        </div>
-        <div class="donate2">
+             
+                <h2>Metodo de donacion: Pago movil </h2>
+
+                <ul>
+                    <li>Banco plaza-0138</li>
+                    <li>C.I:8.286.263</li>
+                    <li>0412-0888793</li>
+                </ul>
+            </div>
 
         </div>
     </body>
