--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/como_funciona.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/como_funciona.html
@@ -12,8 +12,11 @@
                 <img class="header_element" id="logo" src="{% static 'images/logo_dulce_refugio.png' %}" alt="logo de la funcacion">
             </div>
         </header>
+
+        <div class="parrafo">
         <p>La fundación se mantiene funcionando gracias a los ingresos de los integrantes las donaciones de las iglesias Bautista Memorial y Centro Familiar Cristiano Peniel. Tambien contamos con su ayuda apoyando las actividades que se realizan en un periodo de dos veces por mes o tres veces por mes.</p>
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="{% static 'images/logo2.jpeg' %}" alt="logo iglesia1">
+            <img src="{% static 'images/logo3.png' %}" alt="logo iglesia2">
+        </div>
     </body>
 </html>
