--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/contacto.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/contacto.html
@@ -12,5 +12,16 @@
                 <img class="header_element" id="logo" src="{% static 'images/logo_dulce_refugio.png' %}" alt="logo de la funcacion">
             </div>
         </header>
+
+        <div class="contacto">
+            <p>para mas informcion de nuestras actividades o si quiere apoyar a la fundación comuniquese con nosotros atraves de nuestras redes sociales:</p>
+            <ul>
+                <li>correo electronico de la fundación:</li>
+                <li>correo electronico de la presidenta:</li>
+                <li>instagram:</li>
+                
+            </ul>
+        </div>
+
     </body>
 </html>
