--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/index.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/index.html
@@ -90,6 +90,14 @@
             <p>14 Porque toda la ley en esta sola palabra se cumple: Amarás a tu prójimo como a ti mismo.</p>
         </div>
     </div>
+    <footer>
+        <div class="footer">
+
+            <img class="logo_footer" src="{% static 'images/logo_dulce_refugio.png' %}" alt="logo">
+            <img class="logo_footer" src="{% static 'images/logo2.jpeg' %}" alt="logo">
+            <img class="logo_footer" src="{% static 'images/logo3.png' %}" alt="logo">
+        </div>
+    </footer>
     <script src="static/SCRIPT/script_f.js"></script>
 </body>
 </html>
