--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/quienes_somos.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/quienes_somos.html
@@ -13,8 +13,11 @@
             </div>
         </header>
 
-        <p>Somos una pequeña fundación sin fines de lucro conformada de 6 Integrantes motivados ayudar a las personas necesitadas de alimentos, medicamentos y de bajos recursos, de la parroquia El Carmen y de otras comunidades del estado anzoategui.</p>
-        <p>El objetivo de la fundación Jesus mi Dulce Refugio es crear programas y/o actividades cristianas que ayuden al projimo a seguir adelante, mas que todo en estos momentos de crisis y de pandemia que nos a afectados a todos los venezolanos economicamente. Dificultando conseguir alimentos, medicinas y materiales escolares. La fundacion pretende expandirse y crear nuevas alianzas con otras fundaciones con el mismo objetivo para ayudar a todas las personas del pais en situaciones de pobreza y enfermedad.</p>
-
+            <div class="parrafo">
+                
+                <p>Somos una pequeña fundación sin fines de lucro conformada de 6 Integrantes motivados ayudar a las personas necesitadas de alimentos, medicamentos y de bajos recursos, de la parroquia El Carmen y de otras comunidades del estado anzoategui.</p>
+                <p>El objetivo de la fundación Jesus mi Dulce Refugio es crear programas y/o actividades cristianas que ayuden al projimo a seguir adelante, mas que todo en estos momentos de crisis y de pandemia que nos a afectados a todos los venezolanos economicamente. Dificultando conseguir alimentos, medicinas y materiales escolares. La fundacion pretende expandirse y crear nuevas alianzas con otras fundaciones con el mismo objetivo para ayudar a todas las personas del pais en situaciones de pobreza y enfermedad.</p>
+                
+            </div>  
     </body>
 </html>
