--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/educacion.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/educacion.html
@@ -11,11 +11,24 @@
             <div id="header"> 
                 <img class="header_element" id="logo" src="{% static 'images/logo_dulce_refugio.png' %}" alt="logo de la funcacion">
             </div>
+        </header>      
+
             <div class="donate3">
-                <img src="{% static 'images/photo_donate3.jpg' %}" alt="donate3">
-                <h2>Educación</h2>
-                <p>Si decides donar en el area de educacion estaras apoyando las actividades para las intituciones educativas de la parroquia el Carmen y el municipio Simon Bolivar. En las actidades se realizan charlas, educacion sexual, no a las drogas, bulling entre otros. A los estudiantes que no cuentan con utiles escolares se les ayuda donandoles cuadernos, lapices, borras entre otros. </p>
-            </div> 
-        </header>
+
+                <div class="parrafo">
+                     <img src="{% static 'images/photo_donate3.jpg' %}" alt="donate3">
+                    <h2>Educación</h2>
+                    
+                    <p>Si decides donar en el area de educacion estaras apoyando las actividades para las intituciones educativas de la parroquia el Carmen y el municipio Simon Bolivar. En las actidades se realizan charlas, educacion sexual, no a las drogas, bulling entre otros. A los estudiantes que no cuentan con utiles escolares se les ayuda donandoles bolsos, cuadernos, lapices, borras entre otros. </p>    
+                
+                    <h2>Metodo de donacion: Pago movil </h2>
+    
+                    <ul>
+                        <li>Banco plaza-0138</li>
+                        <li>C.I:8.286.263</li>
+                        <li>0412-0888793</li>
+                    </ul>
+                </div>
+            </div>     
     </body>
 </html>
