--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/entrega_alimentos.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/entrega_alimentos.html
@@ -13,10 +13,20 @@
             </div>
         </header>
         <div class="donate1">
-            <img src="{% static 'images/photo_donate2.jpg' %}" alt="photo_donate2">
-            <h2>Entrega de alimentos.</h2>
-            <p>si decide donar en el area de entrega de alimentos estaria apoyando las actividades que realizamos para ayudar a las personas en situacion de pobreza  en la parroquia El Carmen y el minicipio Simon Bolivar. En estas actividades se preparan en ocasiones cereales, sopas o entregamos alimentos de la cesta basica para a las personas de extrema necesidad, dandoles un mensajes de amor y esperanza. Tomando en consideracion la instruccion de Dios de ayudar al projimo.</p>
 
+            <div class="parrafo">
+                <img src="{% static 'images/photo_donate1.jpg' %}" alt="photo_donate2">
+                <h2>Entrega de alimentos.</h2>
+                <p>si decide donar en el area de entrega de alimentos estaria apoyando las actividades que realizamos para ayudar a las personas en situacion de pobreza  en la parroquia El Carmen y el minicipio Simon Bolivar. En estas actividades se preparan en ocasiones cereales, sopas o entregamos alimentos de la cesta basica para a las personas de extrema necesidad, dandoles un mensajes de amor y esperanza. Tomando en consideracion la instruccion de Dios de ayudar al projimo.</p>
+             
+                <h2>Metodo de donacion: Pago movil </h2>
+
+                <ul>
+                    <li>Banco plaza-0138</li>
+                    <li>C.I:8.286.263</li>
+                    <li>0412-0888793</li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
