--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/entrega_alimentos.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/entrega_alimentos.html
@@ -17,16 +17,34 @@
             <div class="parrafo">
                 <img src="{% static 'images/photo_donate1.jpg' %}" alt="photo_donate2">
                 <h2>Entrega de alimentos.</h2>
-                <p>si decide donar en el area de entrega de alimentos estaria apoyando las actividades que realizamos para ayudar a las personas en situacion de pobreza  en la parroquia El Carmen y el minicipio Simon Bolivar. En estas actividades se preparan en ocasiones cereales, sopas o entregamos alimentos de la cesta basica para a las personas de extrema necesidad, dandoles un mensajes de amor y esperanza. Tomando en consideracion la instruccion de Dios de ayudar al projimo.</p>
+                <p>Si decide donar en el área de entrega de alimentos estaría apoyando las actividades que realizamos para ayudar a las personas en situación de pobreza  en la parroquia El Carmen y el minicipio Simón Bolívar. En estas actividades se preparan en ocasiones cereales, sopas o entregamos alimentos de la cesta básica para a las personas de extrema necesidad, dándoles un mensajes de amor y esperanza. Tomando en consideración la instrucción de Dios de ayudar al prójimo.</p>
              
-                <h2>Metodo de donacion: Pago movil </h2>
+                <h2>Método de donacion: Pago móvil </h2>
 
                 <ul>
-                    <li>Banco plaza-0138</li>
+                    <li>Banco Plaza - 0138</li>
                     <li>C.I:8.286.263</li>
                     <li>0412-0888793</li>
                 </ul>
             </div>
         </div>
+
+        <div class="donations_container parrafo">
+            <h2>Donaciones Recientes</h2>
+            <ul class="donations_list">
+                {% for donation in donations %}
+                    <li class="donation_item"> 
+                        <h3 class="donor_name">{{donation.donor}}</h3>
+                        <p class="amount">{{donation.amount}} {{donation.currency}}</p>
+                        <p class="date">{{donation.date_time}}</p>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <form action="{% url 'entrega_alimentos' %}" method="post">
+                {% csrf_token %}
+                {{ form }}
+                <input type="submit" value="Donar">
+        </form>
     </body>
 </html>
