--- a/jmdr_crowfunding/jmdr_crowfunding_app/static/CSS/style_campana.css
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/static/CSS/style_campana.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     background-color: rgb(182, 224, 250);
-
 }
 
 div#header {
@@ -58,9 +57,84 @@ img#logo {
 .campaing_text > h2:hover {
     background: rgb(133, 133, 133);
     border-radius: 5px;
-    
 }
 
-div.form_container > form > label {
-
+.inf{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    text-align: center; 
 }
+
+div.form_container > form {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #202020; 
+    font-size: 18px; 
+    font-weight: 400; 
+    text-align: center; 
+    background: #889ccf; 
+    margin: 0 0 25px; 
+    overflow: hidden; 
+    padding: 20px; 
+    border-radius: 35px 0px 35px 0px; 
+    -moz-border-radius: 35px 0px 35px 0px; 
+    -webkit-border-radius: 35px 0px 35px 0px; 
+    border: 2px solid #5878ca;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: 60px;
+    line-height: 35px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+div.form_container > form label {
+    width: 60%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    resize: vertical;;
+    margin-top:30px;
+    margin-left: 70px;
+    transition: all 0.4s linear;
+    justify-content: center;
+    align-content: center;
+}
+div.form_container > form input {
+    width: 60%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    resize: vertical;;
+    margin-top:30px;
+    margin-left: 70px;
+    transition: all 0.4s linear;
+    justify-content: center;
+}
+div.form_container > form select {
+    width: 60%;
+    padding:10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    resize: vertical;;
+    margin-top:30px;
+    margin-left: 70px;
+}
+
+div.form_container > form label:hover {
+    background: rgb(133, 133, 133);
+    border-radius: 10px
+}
+
+div.form_container > form input[type=submit]{ 
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px; 
+}
+
+div.form_container > form input[type=submit]:hover {
+    background: rgb(133, 133, 133);
+    border-radius: 10px
+}
+
