--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/entrega_alimentos.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/entrega_alimentos.html
@@ -18,7 +18,12 @@
                 <img src="{% static 'images/photo_donate1.jpg' %}" alt="photo_donate2">
                 <h2>Entrega de alimentos.</h2>
                 <p>Si decide donar en el área de entrega de alimentos estaría apoyando las actividades que realizamos para ayudar a las personas en situación de pobreza  en la parroquia El Carmen y el minicipio Simón Bolívar. En estas actividades se preparan en ocasiones cereales, sopas o entregamos alimentos de la cesta básica para a las personas de extrema necesidad, dándoles un mensajes de amor y esperanza. Tomando en consideración la instrucción de Dios de ayudar al prójimo.</p>
-             
+
+                <form class="donations" action="{% url 'entrega_alimentos' %}" method="post">
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" value="Donar">
+                </form>
                 <h2>Método de donacion: Pago móvil </h2>
 
                 <ul>
@@ -26,6 +31,8 @@
                     <li>C.I:8.286.263</li>
                     <li>0412-0888793</li>
                 </ul>
+                
+                
             </div>
         </div>
 
@@ -41,10 +48,6 @@
                 {% endfor %}
             </ul>
         </div>
-        <form action="{% url 'entrega_alimentos' %}" method="post">
-                {% csrf_token %}
-                {{ form }}
-                <input type="submit" value="Donar">
-        </form>
+       
     </body>
 </html>
