--- a/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/campanas.html
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/templates/jmdr_crowfunding/HTML/campanas.html
@@ -54,6 +54,7 @@
                     {% csrf_token %}
                     {{ form }}
                     <input type="submit" value="Apoyar">
+                    <p class="total">{{ supporters_total }} personas apoyándonos.</p>
             </form>
         </div>
     </body>
