--- a/jmdr_crowfunding/jmdr_crowfunding_app/static/CSS/style_e_a.css
+++ b/jmdr_crowfunding/jmdr_crowfunding_app/static/CSS/style_e_a.css
@@ -51,3 +51,48 @@ img#logo {
     text-align: left;
 }
 
+.donations {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.donations > label {
+    width: 60%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    resize: vertical;;
+    margin-top:30px;
+    margin-left: 70px;
+    transition: all 0.4s linear;
+}
+
+.donations > input {
+    width: 60%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    resize: vertical;;
+    margin-top:30px;
+    margin-left: 70px;
+    transition: all 0.4s linear;
+}
+
+.donations > label:hover {
+    background: rgb(133, 133, 133);
+    border-radius: 10px
+}
+
+.donations > input[type=submit] {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+}
+
+.donations > input[type=submit]:hover{
+    background: rgb(133, 133, 133);
+    border-radius: 10px
+}
+
